new design for mobile on the contact page

--- a/index.html
+++ b/index.html
@@ -43,12 +43,10 @@
         <!--=========== Home ===========--> 
         <section>
             <div class="home section" id="home">
-                <div class="shape shape_big"></div>
-                <div class="shape shape_small"></div>
 
                 <div class="home_conteiner container">
-                    <div class="home_data">
-                        <h1 class="home_title"><span>Hello World!</span></h1>
+                    <div class="home_data" data-aos="fade-down" data-aos-duration="2000">
+                        <h1 class="home_title"><span class="span_title">Hello World!</span></h1>
 
                         <h2 class="home_subtitle">I'm Francisco Gutierrez</h2>
                         <p>Hi! Welcome to my web portfolio! I'm web Developer and Software Enginner Student at Unju.</p>
@@ -58,57 +56,60 @@
                         </h3>
                     </div>  
                     
-                    <img src="./media/img/admin.png" alt="FG WebDev" class="home_img">
+                    <img src="./media/img/admin.png" alt="FG WebDev" class="home_img" data-aos="fade-up" data-aos-duration="2000">
                 </div>
+        </section>
+        <section>
+          .
         </section>
     </main>
     <!--=========== FOOTER ===========-->
     <footer>
-        <div class="footer-top" data-aos="fade-right">
-            <div class="container">
-              <div class="row justify-content-between gy-5">
-                <div class="col-md-4">
-                    <a href="./index.html" class="nav_logo">
-                        <i class="fa-solid fa-code"></i>
-                        Fran
-                    </a>
-                  <p>Hi! Welcome to my web portfolio! My name is Francisco Gutierrez, I'm web Developer and Software Enginner Student at Unju.</p>
-                  <div class="social-icons">
-                    <a href="#"><i class="fa-brands fa-facebook-square"></i></a>
-                    <a href="#"><i class="fa-brands fa-instagram"></i></a>
-                    <a href="#"><i class="fa-brands fa-whatsapp"></i></a>
-                    <a href="#"><i class="fa-brands fa-linkedin"></i></a>
-                    <a href="#"><i class="fa-brands fa-github"></i></a>
+        <div class="footer">
+          <div class="footer-top" data-aos="fade-right">
+              <div class="container">
+                <div class="row justify-content-between gy-5">
+                  <div class="col-md-4">
+                      <a href="./index.html" class="nav_logo">
+                          <i class="fa-solid fa-code"></i>
+                          Fran
+                      </a>
+                    <p>Hi! Welcome to my web portfolio! My name is Francisco Gutierrez, I'm web Developer and Software Enginner Student at Unju.</p>
+                    <div class="social-icons">
+                      <a href="#"><i class="fa-brands fa-facebook-square"></i></a>
+                      <a href="#"><i class="fa-brands fa-instagram"></i></a>
+                      <a href="#"><i class="fa-brands fa-linkedin"></i></a>
+                      <a href="https://github.com/Franjmg" target><i class="fa-brands fa-github"></i></a>
+                    </div>
                   </div>
-                </div>
-                <div class="col-md-2">
-                  <h4 class="title-sm">Navigation</h4>
-                  <div class="footer-links d-flex flex-column">
-                    <a href="./index.html">Home</a>
-                    <a href="./pages/projects.html">Portfolio</a>
-                    <a href="./pages/aboutme.html">About Me</a>
-                    <a href="./pages/skills.html">Skills</a>
-                    <a href="./pages/contact.html">Contact me</a>
+                  <div class="col-md-2">
+                    <h4 class="title-sm">Navigation</h4>
+                    <div class="footer-links d-flex flex-column">
+                      <a href="./index.html">Home</a>
+                      <a href="./pages/projects.html">Portfolio</a>
+                      <a href="./pages/aboutme.html">About Me</a>
+                      <a href="./pages/skills.html">Skills</a>
+                      <a href="./pages/contact.html">Contact me</a>
+                    </div>
                   </div>
-                </div>
-                <div class="col-md-2">
-                  <h4 class="title-sm">More</h4>
-                  <div class="footer-links d-flex flex-column">
-                    <a href="#">FAQ's</a>
-                    <a href="#">Liscenses</a>
-                    <a href="#">Privacy and Policy</a>
+                  <div class="col-md-2">
+                    <h4 class="title-sm">More</h4>
+                    <div class="footer-links d-flex flex-column">
+                      <a href="#">FAQ's</a>
+                      <a href="#">Liscenses</a>
+                      <a href="#">Privacy and Policy</a>
+                    </div>
                   </div>
-                </div>
-                <div class="col-md-3">
-                  <h4 class="title-sm">Contact</h4>
-                  <div class="footer-links">
-                    <p class="mb">Jujuy, Argentina</p>
-                    <p class="mb">San Salvador de Jujuy</p>
-                    <p class="mb">+54 1234 567895</p>
+                  <div class="col-md-3">
+                    <h4 class="title-sm">Contact</h4>
+                    <div class="footer-links">
+                      <p class="mb">Jujuy, Argentina</p>
+                      <p class="mb">San Salvador de Jujuy</p>
+                      <p class="mb">+54 1234 567895</p>
+                    </div>
                   </div>
                 </div>
               </div>
-            </div>
           </div>
           <div class="footer-bottom">
             <div class="container">
@@ -122,6 +123,8 @@
               </div>
             </div>
           </div>
+          <div class="circle"></div>
+        </div class="footer">
       </footer>
     <!-- SCRIPTS -->
     <script src="./main.js"></script>
