--- a/pages/contact.html
+++ b/pages/contact.html
@@ -39,37 +39,60 @@
         </nav>
     </header>
     <main class="main_form">
+        <section class="mail-img">
+          <div class="mail-svg">
+          </div>
+        </section>
         <section class="form" id="home">
             <h2>Contact Me</h2>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
-            <fieldset>
-                <legend>Contact me</legend>
-                <form action="" class="field_form">
-                    <div>
-                        <label for="name">Name</label>
-                        <input type="text" name="name">
-                    </div><br>
-                    <div>
-                        <label for="email">Email</label>
-                        <input type="email" name="email" required>
-                    </div><br>
-                    <div>
-                        <label for="message">Message</label><br>
-                        <textarea name="message" id="" cols="40" rows="10" required></textarea>
+            <p>Do you have an idea in mind? Let's work together.
+            I am interested in independent projects. 
+            If you have any questions or concerns, feel free to use the form.</p>
+            <form action="" class="field_form">
+                <div class="input-container">
+                    <input 
+                    type="text" 
+                    id="name"
+                    class="text-input"
+                    autocomplete="off"
+                    placeholder="Enter your name"
+                    required
+                    >
+                    <label class="label" for="name">Name</label>
+                </div><br>
+                <div class="input-container">
+                    <input 
+                    type="text" 
+                    id="email"
+                    class="text-input"
+                    autocomplete="off"
+                    placeholder="Enter your email"
+                    required
+                    >
+                    <label class="label" for="email">Email</label>
+                </div><br>
+                <div class="input-container">
+                    <textarea 
+                      id="message" 
+                      class="text-input"
+                      required
+                      ></textarea>
+                    <label class="label" for="message">Message</label>
+                </div>
+                <div class="btn_conteiner">
+                  <button>
+                    <div class="svg-wrapper-1">
+                      <div class="svg-wrapper">
+                        <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" width="24" height="24">
+                          <path fill="none" d="M0 0h24v24H0z"></path>
+                          <path fill="currentColor" d="M1.946 9.315c-.522-.174-.527-.455.01-.634l19.087-6.362c.529-.176.832.12.684.638l-5.454 19.086c-.15.529-.455.547-.679.045L12 14l6-8-8 6-8.054-2.685z"></path>
+                        </svg>
+                      </div>
                     </div>
-                    <div class="btn_conteiner">
-                        <input type="reset" value="Clean" class="btns">
-                        <input type="submit" value="Send me message!" class="btns">
-                    </div>
-                </form>
-            </fieldset>               
-        </section>
-        <section>
-            <div class="help_conteiner">
-                <h3>Made with <i class="fa-solid fa-heart"></i> with the help of CoderHouse</h3>
-                <a href="http://www.coderhouse.com" target="_blank"><img src="../media/img/coder.png" alt="coderhouse logo"></a>
-                <iframe width="360" height="205" src="https://www.youtube.com/embed/n8u-tDr565Y" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-            </div>
+                    <span class="span_btn">Send</span>
+                  </button>
+                </div>
+            </form>               
         </section>
     </main>
     <!--=========== FOOTER ===========-->
