new style bg, more content on home, code refactoring

--- a/index.html
+++ b/index.html
@@ -43,24 +43,48 @@
         <!--=========== Home ===========--> 
         <section>
             <div class="home section" id="home">
-
+                <div class="shape shape_big"></div>
+                <div class="shape2 shape_small"></div>
                 <div class="home_conteiner container">
+                  <img src="./media/img/admin.png" alt="FG WebDev" class="home_img" data-aos="fade-up" data-aos-duration="2000">
                     <div class="home_data" data-aos="fade-down" data-aos-duration="2000">
-                        <h1 class="home_title"><span class="span_title">Hello World!</span></h1>
-
-                        <h2 class="home_subtitle">I'm Francisco Gutierrez</h2>
+                      <h2 class="home_subtitle">Francisco Gutierrez</h2>
+                        <h1 class="home_title">Web Developer and user interface designer</h1>
                         <p>Hi! Welcome to my web portfolio! I'm web Developer and Software Enginner Student at Unju.</p>
-                        <h3 class="home_web">
-                            <i class="fa-solid fa-mug-saucer"></i>
-                            Web Developer 
-                        </h3>
                     </div>  
                     
-                    <img src="./media/img/admin.png" alt="FG WebDev" class="home_img" data-aos="fade-up" data-aos-duration="2000">
                 </div>
         </section>
-        <section>
-          .
+        <section class="home_portfolio">
+          <div class="container">
+            <h3 class="home_subtitle">Selected projects</h3>
+            <h2 class="home_title">
+              Personal Projects
+            </h2>
+            <div class="home_cards">
+              <article class="home_card">
+                <div class="card_content">
+                  <p class="card_description">2022</p>
+                  <h3 class="card_title">AuHelp</h3>
+                </div>
+                <div class="card_img"></div>
+              </article>
+              <article class="home_card2">
+                <div class="card_content">
+                  <p class="card_description">2022</p>
+                  <h3 class="card_title">AuHelp</h3>
+                </div>
+                <div class="card_img2"></div>
+              </article>
+              <article class="home_card">
+                <div class="card_content">
+                  <p class="card_description">2022</p>
+                  <h3 class="card_title">AuHelp</h3>
+                </div>
+                <div class="card_img"></div>
+              </article>
+            </div class="home_cards">
+          </div>
         </section>
     </main>
     <!--=========== FOOTER ===========-->
