--- a/pages/aboutme.html
+++ b/pages/aboutme.html
@@ -58,12 +58,12 @@
                     </p>
                     <i class="fa-solid fa-graduation-cap"></i>
                 </div>
-                <div class="me">
-                    <h2>Me</h2>
+                <div class="me" id="map">
+                    <!-- <h2>Me</h2>
                     <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.
                     Natus perferendis tenetur modi, doloremque laboriosam impedit.
                     </p>
-                    <i class="fa-solid fa-child"></i>
+                    <i class="fa-solid fa-child"></i> -->
                 </div>
             </div>
         </section>
