--- a/pages/contact.html
+++ b/pages/contact.html
@@ -39,13 +39,13 @@
         </nav>
     </header>
     <main class="main_form">
-        <section class="mail-img">
+        <section class="mail-img container">
           <div class="mail-svg">
           </div>
         </section>
-        <section class="form" id="home">
+        <section class="form container" id="home">
             <h2>Contact Me</h2>
-            <p>Do you have an idea in mind? Let's work together.
+            <p>Do you have an project in mind? Let's work together.
             I am interested in independent projects. 
             If you have any questions or concerns, feel free to use the form.</p>
             <form action="" class="field_form">
