breakpoints home and contact

--- a/index.html
+++ b/index.html
@@ -51,39 +51,59 @@
                       <h2 class="home_subtitle">Francisco Gutierrez</h2>
                         <h1 class="home_title">Web Developer and user interface designer</h1>
                         <p>Hi! Welcome to my web portfolio! I'm web Developer and Software Enginner Student at Unju.</p>
+                      <div class="home_links">
+                        <a href="#home_portfolio">View Projects</a>
+                        <span>or</span>
+                        <a href="./pages/aboutme.html">Read About Me</a>
+                      </div>
                     </div>  
-                    
+                </div>
+                <div class="mouse_body">
+                  <a href="#home_portfolio" class="mouse">
+                    <span class="mouse-wheel"></span>
+                  </a>
                 </div>
         </section>
-        <section class="home_portfolio">
+        <section class="home_portfolio" id="home_portfolio">
           <div class="container">
             <h3 class="home_subtitle">Selected projects</h3>
             <h2 class="home_title">
               Personal Projects
             </h2>
             <div class="home_cards">
-              <article class="home_card">
+              <article class="home_card hcard">
                 <div class="card_content">
                   <p class="card_description">2022</p>
                   <h3 class="card_title">AuHelp</h3>
                 </div>
-                <div class="card_img"></div>
+                <div class="card_img"><img src="./media/img/auhelp.jpg" alt="Blog AuHelp"></div>
+                <div class="card_bg"><a href="./pages/projects.html" class="ref">View More <i class="fa-solid fa-arrow-right-long"></i></a></div>
               </article>
-              <article class="home_card2">
+              <article class="home_card2 hcard">
                 <div class="card_content">
                   <p class="card_description">2022</p>
-                  <h3 class="card_title">AuHelp</h3>
+                  <h3 class="card_title">Independent Entrepreneur</h3>
                 </div>
-                <div class="card_img2"></div>
+                <div class="card_img2"><img src="./media/img/omnilife.jpg" alt="Page of Omnilife"></div>
+                <div class="card_bg"><a href="./pages/projects.html" class="ref">View More <i class="fa-solid fa-arrow-right-long"></i></a></div>
               </article>
-              <article class="home_card">
+              <article class="home_card hcard">
                 <div class="card_content">
                   <p class="card_description">2022</p>
-                  <h3 class="card_title">AuHelp</h3>
+                  <h3 class="card_title">Chess</h3>
                 </div>
-                <div class="card_img"></div>
+                <div class="card_img3"><img src="./media/img/chess.png" alt="Game of Chess"></div>
+                <div class="card_bg"><a href="./pages/projects.html" class="ref">View More <i class="fa-solid fa-arrow-right-long"></i></a></div>
               </article>
             </div class="home_cards">
+          </div>
+        </section>
+        <section class="home_contact">
+          <div class="container">
+            <h3 class="home_subtitle">Need a Web Developer?</h3>
+            <h2 class="home-contact-title">
+              <a href="./pages/contact.html">Let's work together <i class="fa-solid fa-arrow-right-long"></i></a>
+            </h2>
           </div>
         </section>
     </main>
