--- a/pages/contact.html
+++ b/pages/contact.html
@@ -38,10 +38,9 @@
             </div>
         </nav>
     </header>
-    <main class="main_form">
+    <main class="main_form container">
         <section class="mail-img container">
-          <div class="mail-svg">
-          </div>
+          <img src="../media/img/mail-sent-animate.svg" class="mail-svg" alt="image contact fran">
         </section>
         <section class="form container" id="home">
             <h2>Contact Me</h2>
