--- a/pages/projects.html
+++ b/pages/projects.html
@@ -47,11 +47,7 @@
                     <img src="../media/img/auhelp.jpg" alt="auhelp project" width="14%">
                     <div class="capa">
                         <h2>AuHelp</h2>
-                        <ul>
-                            <li>Lorem ipsum dolor sit amet.</li>
-                            <li>Lorem ipsum dolor sit.</li>
-                            <li>Lorem ipsum dolor sit amet consectetur.</li>
-                        </ul>
+                        <p>Blog intended to provide useful information for children with special abilities </p>
                         <button class="btns">More</button>
                     </div>
                 </figure>
@@ -61,12 +57,7 @@
                     <img src="../media/img/omnilife.jpg" alt="omnilife project" width="14%">
                     <div class="capa">
                         <h2>Omniplus</h2>
-                        <ul>
-                            <li>Pagina Diseñada para Emprendedores Independientes</li>
-                            <li>Suplementos Nutricionales</li>
-                            <li>Aun se encuentra en desarrollo</li>
-                            <li>Puedes ver como va su progreso</li>
-                        </ul>
+                        <p>Pagina Diseñada para Emprendedores Independientes suplementos Nutricionales, Aun se encuentra en desarrollo. Puedes ver como va su progreso</p>
                         <a href="https://franjmg.github.io/bootstrap-page/" target="_blank"><button class="btns">Ver Progreso</button></a>
                     </div>
                 </figure>
@@ -76,11 +67,7 @@
                     <img src="../media/img/chess.png" alt="chess project" width="14%">
                     <div class="capa">
                         <h2>AuHelp</h2>
-                        <ul>
-                            <li>Lorem ipsum dolor sit amet.</li>
-                            <li>Lorem ipsum dolor sit.</li>
-                            <li>Lorem ipsum dolor sit amet consectetur.</li>
-                        </ul>
+                        <p>Chess game made with java, It is still in the development phase. In a short time it will be available</p>
                         <button class="btns">More</button>
                     </div>
                 </figure>
