--- a/pages/contact.html
+++ b/pages/contact.html
@@ -96,6 +96,7 @@
     </main>
     <!--=========== FOOTER ===========-->
     <footer>
+      <div class="footer">
         <div class="footer-top" data-aos="fade-right">
             <div class="container">
               <div class="row justify-content-between gy-5">
@@ -104,31 +105,29 @@
                         <i class="fa-solid fa-code"></i>
                         Fran
                     </a>
-                    <p>Hi! Welcome to my web portfolio! My name is Francisco Gutierrez, I'm web Developer and Software Enginner Student at Unju.</p>
+                  <p>Hi! Welcome to my web portfolio! My name is Francisco Gutierrez, I'm web Developer and Software Enginner Student at Unju.</p>
                   <div class="social-icons">
-                    <a href="#"><i class="fa-brands fa-facebook-square"></i></a>
-                    <a href="#"><i class="fa-brands fa-instagram"></i></a>
-                    <a href="#"><i class="fa-brands fa-whatsapp"></i></a>
-                    <a href="#"><i class="fa-brands fa-linkedin"></i></a>
-                    <a href="#"><i class="fa-brands fa-github"></i></a>
+                    <a href="https://www.linkedin.com/in/franjmg/" target="_blank"><i class="fa-brands fa-linkedin"></i></a>
+                    <a href="https://github.com/Franjmg" target="_blank"><i class="fa-brands fa-github"></i></a>
+                    <a href="https://www.instagram.com/franciscoojmg/" target="_blank"><i class="fa-brands fa-instagram"></i></a>
                   </div>
                 </div>
                 <div class="col-md-2">
                   <h4 class="title-sm">Navigation</h4>
                   <div class="footer-links d-flex flex-column">
                     <a href="../index.html">Home</a>
-                    <a href="./projects.html">Portfolio</a>
-                    <a href="./aboutme.html">About Me</a>
-                    <a href="./skills.html">Skills</a>
-                    <a href="./contact.html">Contact me</a>
+                    <a href="../pages/projects.html">Portfolio</a>
+                    <a href="../pages/aboutme.html">About Me</a>
+                    <a href="../pages/skills.html">Skills</a>
+                    <a href="../pages/contact.html">Contact me</a>
                   </div>
                 </div>
                 <div class="col-md-2">
-                  <h4 class="title-sm">More</h4>
+                  <h4 class="title-sm">Social</h4>
                   <div class="footer-links d-flex flex-column">
-                    <a href="#">FAQ's</a>
-                    <a href="#">Liscenses</a>
-                    <a href="#">Privacy and Policy</a>
+                    <a href="https://github.com/Franjmg" target="_blank">Github</a>
+                    <a href="https://www.linkedin.com/in/franjmg/" target="_blank">Linkedin</a>
+                    <a href="https://www.instagram.com/franciscoojmg/" target="_blank">Instagram</a>
                   </div>
                 </div>
                 <div class="col-md-3">
@@ -141,19 +140,21 @@
                 </div>
               </div>
             </div>
-          </div>
-          <div class="footer-bottom">
-            <div class="container">
-              <div class="row justify-content-between gy-3">
-                <div class="col-md-6">
-                  <p class="mb-0">@Copyright2022</p>
-                </div>
-                <div class="col-auto">
-                  <p class="mb-0">Design by Francisco Gutiereez</p>
-                </div>
+        </div>
+        <div class="footer-bottom">
+          <div class="container">
+            <div class="row justify-content-between gy-3">
+              <div class="col-md-6">
+                <p class="mb-0">@Copyright2022</p>
+              </div>
+              <div class="col-auto">
+                <p class="mb-0">Design by Francisco Gutierrez</p>
               </div>
             </div>
           </div>
+        </div>
+        <div class="circle"></div>
+      </div class="footer">
     </footer>
     <!-- SCRIPTS -->
     <script src="../main.js"></script>
