--- a/index.html
+++ b/index.html
@@ -49,8 +49,8 @@
                   <img src="./media/img/admin.png" alt="FG WebDev" class="home_img" data-aos="fade-up" data-aos-duration="2000">
                     <div class="home_data" data-aos="fade-down" data-aos-duration="2000">
                       <h2 class="home_subtitle">Francisco Gutierrez</h2>
-                        <h1 class="home_title">Web Developer and user interface designer</h1>
-                        <p>Hi! Welcome to my web portfolio! I'm web Developer and Software Enginner Student at Unju.</p>
+                      <h1 class="home_title">Web Developer and user interface designer</h1>
+                      <p>Hi! Welcome to my web portfolio! I'm web Developer and Software Enginner Student at Unju.</p>
                       <div class="home_links">
                         <a href="#home_portfolio">View Projects</a>
                         <span>or</span>
@@ -109,67 +109,66 @@
     </main>
     <!--=========== FOOTER ===========-->
     <footer>
-        <div class="footer">
-          <div class="footer-top" data-aos="fade-right">
-              <div class="container">
-                <div class="row justify-content-between gy-5">
-                  <div class="col-md-4">
-                      <a href="./index.html" class="nav_logo">
-                          <i class="fa-solid fa-code"></i>
-                          Fran
-                      </a>
-                    <p>Hi! Welcome to my web portfolio! My name is Francisco Gutierrez, I'm web Developer and Software Enginner Student at Unju.</p>
-                    <div class="social-icons">
-                      <a href="#"><i class="fa-brands fa-facebook-square"></i></a>
-                      <a href="#"><i class="fa-brands fa-instagram"></i></a>
-                      <a href="#"><i class="fa-brands fa-linkedin"></i></a>
-                      <a href="https://github.com/Franjmg" target><i class="fa-brands fa-github"></i></a>
-                    </div>
-                  </div>
-                  <div class="col-md-2">
-                    <h4 class="title-sm">Navigation</h4>
-                    <div class="footer-links d-flex flex-column">
-                      <a href="./index.html">Home</a>
-                      <a href="./pages/projects.html">Portfolio</a>
-                      <a href="./pages/aboutme.html">About Me</a>
-                      <a href="./pages/skills.html">Skills</a>
-                      <a href="./pages/contact.html">Contact me</a>
-                    </div>
-                  </div>
-                  <div class="col-md-2">
-                    <h4 class="title-sm">More</h4>
-                    <div class="footer-links d-flex flex-column">
-                      <a href="#">FAQ's</a>
-                      <a href="#">Liscenses</a>
-                      <a href="#">Privacy and Policy</a>
-                    </div>
-                  </div>
-                  <div class="col-md-3">
-                    <h4 class="title-sm">Contact</h4>
-                    <div class="footer-links">
-                      <p class="mb">Jujuy, Argentina</p>
-                      <p class="mb">San Salvador de Jujuy</p>
-                      <p class="mb">+54 1234 567895</p>
-                    </div>
-                  </div>
-                </div>
-              </div>
-          </div>
-          <div class="footer-bottom">
+      <div class="footer">
+        <div class="footer-top" data-aos="fade-right">
             <div class="container">
-              <div class="row justify-content-between gy-3">
-                <div class="col-md-6">
-                  <p class="mb-0">@Copyright2022</p>
+              <div class="row justify-content-between gy-5">
+                <div class="col-md-4">
+                    <a href="./index.html" class="nav_logo">
+                        <i class="fa-solid fa-code"></i>
+                        Fran
+                    </a>
+                  <p>Hi! Welcome to my web portfolio! My name is Francisco Gutierrez, I'm web Developer and Software Enginner Student at Unju.</p>
+                  <div class="social-icons">
+                    <a href="https://www.linkedin.com/in/franjmg/" target="_blank"><i class="fa-brands fa-linkedin"></i></a>
+                    <a href="https://github.com/Franjmg" target="_blank"><i class="fa-brands fa-github"></i></a>
+                    <a href="https://www.instagram.com/franciscoojmg/" target="_blank"><i class="fa-brands fa-instagram"></i></a>
+                  </div>
                 </div>
-                <div class="col-auto">
-                  <p class="mb-0">Design by Francisco Gutierrez</p>
+                <div class="col-md-2">
+                  <h4 class="title-sm">Navigation</h4>
+                  <div class="footer-links d-flex flex-column">
+                    <a href="../index.html">Home</a>
+                    <a href="../pages/projects.html">Portfolio</a>
+                    <a href="../pages/aboutme.html">About Me</a>
+                    <a href="../pages/skills.html">Skills</a>
+                    <a href="../pages/contact.html">Contact me</a>
+                  </div>
+                </div>
+                <div class="col-md-2">
+                  <h4 class="title-sm">Social</h4>
+                  <div class="footer-links d-flex flex-column">
+                    <a href="https://github.com/Franjmg" target="_blank">Github</a>
+                    <a href="https://www.linkedin.com/in/franjmg/" target="_blank">Linkedin</a>
+                    <a href="https://www.instagram.com/franciscoojmg/" target="_blank">Instagram</a>
+                  </div>
+                </div>
+                <div class="col-md-3">
+                  <h4 class="title-sm">Contact</h4>
+                  <div class="footer-links">
+                    <p class="mb">Jujuy, Argentina</p>
+                    <p class="mb">San Salvador de Jujuy</p>
+                    <p class="mb">+54 1234 567895</p>
+                  </div>
                 </div>
               </div>
             </div>
+        </div>
+        <div class="footer-bottom">
+          <div class="container">
+            <div class="row justify-content-between gy-3">
+              <div class="col-md-6">
+                <p class="mb-0">@Copyright2022</p>
+              </div>
+              <div class="col-auto">
+                <p class="mb-0">Design by Francisco Gutierrez</p>
+              </div>
+            </div>
           </div>
-          <div class="circle"></div>
-        </div class="footer">
-      </footer>
+        </div>
+        <div class="circle"></div>
+      </div class="footer">
+    </footer>
     <!-- SCRIPTS -->
     <script src="./main.js"></script>
     <script src="https://kit.fontawesome.com/266ba5adca.js" crossorigin="anonymous"></script>
